# SleepyTime

./: .clang-format  .gitignore  Dockerfile  Makefile  README.md  west.yml
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  Kconfig  ble_service.c  display_service.c  display_service.h  main.c  motion_service.c  motion_service.h  power_service.c  power_service.h  prj.conf
app/backends/motion/: bmi270_service.c  bmi270_service.h  lis3dh_service.c  lis3dh_service.h
app/backends/wakeup/: wakeup_grtc.c  wakeup_grtc.h  wakeup_pcf8563.c  wakeup_pcf8563.h
app/boards/: sleepytime_proto.overlay
app/core/: main.c
app/services/: ble_service.h  display_service.c  display_service.h  power_service.c  power_service.h  time_service.c  time_service.h
app/src/: main.c
app/support/: openocd-debug.cfg
lib/epd_canvas/: CMakeLists.txt  epd_canvas.c  epd_canvas.h
lib/watch_sm/: CMakeLists.txt  watch_sm.c  watch_sm.h
lib/watch_time/: CMakeLists.txt  watch_time.c  watch_time.h
samples/ble_timesync/: CMakeLists.txt  prj.conf
samples/ble_timesync/src/: main.c
samples/blink/: README.md  prj.conf
samples/blink/src/: main.c
samples/button/: CMakeLists.txt  README.md  prj.conf
samples/button/src/: main.c
samples/button_wakeup/: CMakeLists.txt  README.md  prj.conf
samples/button_wakeup/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/button_wakeup/src/: main.c
samples/epd/: CMakeLists.txt  prj.conf
samples/epd/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/epd/src/: main.c
samples/i2c_scan/: CMakeLists.txt  README.md  prj.conf
samples/i2c_scan/src/: main.c
tests/: CMakeLists.txt
tests/test_epd_canvas/: CMakeLists.txt  test_epd_canvas.c
tests/test_watch_sm/: CMakeLists.txt  test_watch_sm.c
tests/test_watch_time/: CMakeLists.txt  test_watch_time.c
